--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>jp.oiyokan</groupId>
 	<artifactId>oiyokan-demosite</artifactId>
-	<version>1.6.20210422</version>
+	<version>1.6.20210423</version>
 	<name>oiyokan-demosite</name>
 	<description>Oiyokan is a simple OData v4 Server. (based on Apache
 		Olingo / Spring Boot / h2 database)</description>
@@ -88,11 +88,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Oiyokan Core Library -->
+		<!-- Oiyokan Library -->
 		<dependency>
 			<groupId>jp.oiyokan</groupId>
 			<artifactId>oiyokan</artifactId>
-			<version>1.6.20210422</version>
+			<version>1.6.20210423</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
