--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ logging.level.jp.oiyokan.OiyokanEntityCollectionProcessor=INFO
 logging.level.jp.oiyokan.OiyokanEntityProcessor=INFO
 logging.level.jp.oiyokan.common.OiyoInfoUtil=INFO
 logging.level.jp.oiyokan.common.OiyoCommonJdbcUtil=INFO
+
+logging.level.jp.oiyokan.basic.OiyoBasicJdbcEntityCollectionBuilder=INFO
+logging.level.jp.oiyokan.basic.sql.OiyoSqlQueryListBuilder=INFO
+logging.level.jp.oiyokan.basic.sql.OiyoSqlQueryListExpr=INFO
