--- a/src/main/resources/oiyokan/oiyokan-settings.json
+++ b/src/main/resources/oiyokan/oiyokan-settings.json
@@ -77,6 +77,7 @@
             "edmType": "Edm.Int32",
             "jdbcType": "Types.INTEGER",
             "dbType": "INTEGER",
+            "autoGenKey" : true,
             "nullable": false
           },
           {
@@ -366,6 +367,7 @@
             "edmType": "Edm.Int32",
             "jdbcType": "Types.INTEGER",
             "dbType": "INTEGER",
+            "autoGenKey" : true,
             "nullable": false
           },
           {
@@ -633,6 +635,7 @@
             "edmType": "Edm.Int64",
             "jdbcType": "Types.BIGINT",
             "dbType": "BIGINT",
+            "autoGenKey" : true,
             "nullable": false
           },
           {
@@ -677,6 +680,7 @@
             "edmType": "Edm.Int32",
             "jdbcType": "Types.INTEGER",
             "dbType": "INTEGER",
+            "autoGenKey" : true,
             "nullable": false
           },
           {
