--- a/src/main/resources/oiyokan/oiyokan-settings-MySQL.json
+++ b/src/main/resources/oiyokan/oiyokan-settings-MySQL.json
@@ -77,6 +77,7 @@
             "edmType": "Edm.Int32",
             "jdbcType": "Types.INTEGER",
             "dbType": "INTEGER",
+            "autoGenKey" : true,
             "nullable": false
           },
           {
@@ -342,6 +343,7 @@
             "edmType": "Edm.Int32",
             "jdbcType": "Types.INTEGER",
             "dbType": "INTEGER",
+            "autoGenKey" : true,
             "nullable": false
           },
           {
@@ -586,6 +588,7 @@
             "edmType": "Edm.Int64",
             "jdbcType": "Types.BIGINT",
             "dbType": "BIGINT",
+            "autoGenKey" : true,
             "nullable": false
           },
           {
@@ -628,6 +631,7 @@
             "edmType": "Edm.Int32",
             "jdbcType": "Types.INTEGER",
             "dbType": "INTEGER",
+            "autoGenKey" : true,
             "nullable": false
           },
           {
