これで良いはず。

--- a/src/main/resources/oiyokan/oiyokan-settings.json
+++ b/src/main/resources/oiyokan/oiyokan-settings.json
@@ -78,7 +78,7 @@
             "jdbcType": "Types.INTEGER",
             "dbType": "INTEGER",
             "autoGenKey" : true,
-            "nullable": false
+            "nullable": true
           },
           {
             "name": "Name",
@@ -368,7 +368,7 @@
             "jdbcType": "Types.INTEGER",
             "dbType": "INTEGER",
             "autoGenKey" : true,
-            "nullable": false
+            "nullable": true
           },
           {
             "name": "Name",
@@ -636,7 +636,7 @@
             "jdbcType": "Types.BIGINT",
             "dbType": "BIGINT",
             "autoGenKey" : true,
-            "nullable": false
+            "nullable": true
           },
           {
             "name": "Name",
@@ -681,7 +681,7 @@
             "jdbcType": "Types.INTEGER",
             "dbType": "INTEGER",
             "autoGenKey" : true,
-            "nullable": false
+            "nullable": true
           },
           {
             "name": "Name",
