--- a/src/main/resources/oiyokan/oiyokan-settings.json
+++ b/src/main/resources/oiyokan/oiyokan-settings.json
@@ -74,11 +74,11 @@
           {
             "name": "ID",
             "dbName": "ID",
-            "edmType": "Edm.Int32",
-            "jdbcType": "Types.INTEGER",
-            "dbType": "INTEGER",
-            "autoGenKey" : true,
-            "nullable": false
+            "edmType": "Edm.Int64",
+            "jdbcType": "Types.BIGINT",
+            "dbType": "IDENTITY",
+            "autoGenKey": true,
+            "nullable": true
           },
           {
             "name": "Name",
@@ -201,7 +201,7 @@
             "jdbcType": "Types.REAL",
             "dbType": "REAL",
             "nullable": true,
-            "dbDefault": "123.456789"
+            "dbDefault": "123.45"
           },
           {
             "name": "Double1",
@@ -364,11 +364,11 @@
           {
             "name": "ID",
             "dbName": "ID",
-            "edmType": "Edm.Int32",
-            "jdbcType": "Types.INTEGER",
-            "dbType": "INTEGER",
-            "autoGenKey" : true,
-            "nullable": false
+            "edmType": "Edm.Int64",
+            "jdbcType": "Types.BIGINT",
+            "dbType": "IDENTITY",
+            "autoGenKey": true,
+            "nullable": true
           },
           {
             "name": "Name",
@@ -634,9 +634,9 @@
             "dbName": "Iden1",
             "edmType": "Edm.Int64",
             "jdbcType": "Types.BIGINT",
-            "dbType": "BIGINT",
-            "autoGenKey" : true,
-            "nullable": false
+            "dbType": "IDENTITY",
+            "autoGenKey": true,
+            "nullable": true
           },
           {
             "name": "Name",
@@ -677,11 +677,11 @@
           {
             "name": "ID",
             "dbName": "ID",
-            "edmType": "Edm.Int32",
-            "jdbcType": "Types.INTEGER",
-            "dbType": "INTEGER",
-            "autoGenKey" : true,
-            "nullable": false
+            "edmType": "Edm.Int64",
+            "jdbcType": "Types.BIGINT",
+            "dbType": "IDENTITY",
+            "autoGenKey": true,
+            "nullable": true
           },
           {
             "name": "Name",
@@ -794,6 +794,304 @@
             "dbType": "UUID",
             "nullable": true,
             "dbDefault": "RANDOM_UUID()"
+          }
+        ]
+      }
+    },
+    {
+      "name": "ODataTest8s",
+      "description": "Description.",
+      "dbSettingName": "oiyoUnitTestDb",
+      "canCreate": true,
+      "canRead": true,
+      "canUpdate": true,
+      "canDelete": true,
+      "entityType": {
+        "name": "ODataTest8",
+        "dbName": "ODataTest8",
+        "keyName": ["MainKey"],
+        "property": [
+          {
+            "name": "MainKey",
+            "dbName": "MainKey",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": false,
+            "maxLength": 20
+          },
+          {
+            "name": "Description",
+            "dbName": "Description",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": true,
+            "maxLength": 250,
+            "dbDefault": "'Main table'"
+          }
+        ]
+      }
+    },
+    {
+      "name": "ODataTest8Subs",
+      "description": "Description.",
+      "dbSettingName": "oiyoUnitTestDb",
+      "canCreate": true,
+      "canRead": true,
+      "canUpdate": true,
+      "canDelete": true,
+      "entityType": {
+        "name": "ODataTest8Sub",
+        "dbName": "ODataTest8Sub",
+        "keyName": ["MainKey", "SubKey"],
+        "property": [
+          {
+            "name": "MainKey",
+            "dbName": "MainKey",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": false,
+            "maxLength": 20
+          },
+          {
+            "name": "SubKey",
+            "dbName": "SubKey",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": false,
+            "maxLength": 20
+          },
+          {
+            "name": "Description",
+            "dbName": "Description",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": true,
+            "maxLength": 250,
+            "dbDefault": "'Sub table'"
+          }
+        ]
+      }
+    },
+    {
+      "name": "ODataTest8SubSubs",
+      "description": "Description.",
+      "dbSettingName": "oiyoUnitTestDb",
+      "canCreate": true,
+      "canRead": true,
+      "canUpdate": true,
+      "canDelete": true,
+      "entityType": {
+        "name": "ODataTest8SubSub",
+        "dbName": "ODataTest8SubSub",
+        "keyName": ["MainKey", "SubKey", "SubSubKey"],
+        "property": [
+          {
+            "name": "MainKey",
+            "dbName": "MainKey",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": false,
+            "maxLength": 20
+          },
+          {
+            "name": "SubKey",
+            "dbName": "SubKey",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": false,
+            "maxLength": 20
+          },
+          {
+            "name": "SubSubKey",
+            "dbName": "SubSubKey",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": false,
+            "maxLength": 20
+          },
+          {
+            "name": "Description",
+            "dbName": "Description",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": true,
+            "maxLength": 250,
+            "dbDefault": "'Sub sub table'"
+          }
+        ]
+      }
+    },
+    {
+      "name": "ODataTestFulls1s",
+      "description": "Description.",
+      "dbSettingName": "oiyoUnitTestDb",
+      "canCreate": true,
+      "canRead": true,
+      "canUpdate": true,
+      "canDelete": true,
+      "entityType": {
+        "name": "ODataTestFulls1",
+        "dbName": "ODataTestFulls1",
+        "keyName": ["ID"],
+        "property": [
+          {
+            "name": "ID",
+            "dbName": "ID",
+            "edmType": "Edm.Int64",
+            "jdbcType": "Types.BIGINT",
+            "dbType": "IDENTITY",
+            "autoGenKey": true,
+            "nullable": true
+          },
+          {
+            "name": "Name",
+            "dbName": "Name",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": false,
+            "maxLength": 80,
+            "dbDefault": "'Fulltext UnitTest (Experimental)'"
+          },
+          {
+            "name": "Description",
+            "dbName": "Description",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": true,
+            "maxLength": 250
+          },
+          {
+            "name": "Sbyte1",
+            "dbName": "Sbyte1",
+            "edmType": "Edm.SByte",
+            "jdbcType": "Types.TINYINT",
+            "dbType": "TINYINT",
+            "nullable": true,
+            "dbDefault": "127"
+          },
+          {
+            "name": "Int16a",
+            "dbName": "Int16a",
+            "edmType": "Edm.Int16",
+            "jdbcType": "Types.SMALLINT",
+            "dbType": "SMALLINT",
+            "nullable": true,
+            "dbDefault": "32767"
+          },
+          {
+            "name": "Int32a",
+            "dbName": "Int32a",
+            "edmType": "Edm.Int32",
+            "jdbcType": "Types.INTEGER",
+            "dbType": "INTEGER",
+            "nullable": true,
+            "dbDefault": "2147483647"
+          },
+          {
+            "name": "Int64a",
+            "dbName": "Int64a",
+            "edmType": "Edm.Int64",
+            "jdbcType": "Types.BIGINT",
+            "dbType": "BIGINT",
+            "nullable": true,
+            "dbDefault": "2147483647"
+          },
+          {
+            "name": "Decimal1",
+            "dbName": "Decimal1",
+            "edmType": "Edm.Decimal",
+            "jdbcType": "Types.DECIMAL",
+            "dbType": "DECIMAL",
+            "nullable": true,
+            "precision": 6,
+            "scale": 2,
+            "dbDefault": "1234.56"
+          },
+          {
+            "name": "StringChar8",
+            "dbName": "StringChar8",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.CHAR",
+            "dbType": "CHAR",
+            "nullable": true,
+            "maxLength": 8,
+            "lengthFixed": true,
+            "dbDefault": "'CHAR_VAL'"
+          },
+          {
+            "name": "StringVar255",
+            "dbName": "StringVar255",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": true,
+            "maxLength": 255,
+            "dbDefault": "'VARCHAR255'"
+          },
+          {
+            "name": "Boolean1",
+            "dbName": "Boolean1",
+            "edmType": "Edm.Boolean",
+            "jdbcType": "Types.BOOLEAN",
+            "dbType": "BOOLEAN",
+            "nullable": false,
+            "dbDefault": "FALSE"
+          },
+          {
+            "name": "Single1",
+            "dbName": "Single1",
+            "edmType": "Edm.Single",
+            "jdbcType": "Types.REAL",
+            "dbType": "REAL",
+            "nullable": true,
+            "dbDefault": "123.456789"
+          },
+          {
+            "name": "Double1",
+            "dbName": "Double1",
+            "edmType": "Edm.Double",
+            "jdbcType": "Types.DOUBLE",
+            "dbType": "DOUBLE",
+            "nullable": true,
+            "dbDefault": "123.4567890123"
+          },
+          {
+            "name": "Date1",
+            "dbName": "Date1",
+            "edmType": "Edm.Date",
+            "jdbcType": "Types.DATE",
+            "dbType": "DATE",
+            "nullable": false,
+            "dbDefault": "CURRENT_DATE"
+          },
+          {
+            "name": "DateTimeOffset1",
+            "dbName": "DateTimeOffset1",
+            "edmType": "Edm.DateTimeOffset",
+            "jdbcType": "Types.TIMESTAMP",
+            "dbType": "TIMESTAMP",
+            "nullable": false,
+            "dbDefault": "CURRENT_TIMESTAMP"
+          },
+          {
+            "name": "TimeOfDay1",
+            "dbName": "TimeOfDay1",
+            "edmType": "Edm.TimeOfDay",
+            "jdbcType": "Types.TIME",
+            "dbType": "TIME",
+            "nullable": true,
+            "dbDefault": "CURRENT_TIME"
           }
         ]
       }
