entytset, typeの名称揃える

--- a/src/main/resources/oiyokan/oiyokan-settings-ORCL18.json
+++ b/src/main/resources/oiyokan/oiyokan-settings-ORCL18.json
@@ -59,7 +59,7 @@
   ],
   "entitySet": [
     {
-      "name": "ODataTests1",
+      "name": "ODataTest1",
       "description": "Description.",
       "dbSettingName": "oracle1",
       "canCreate": true,
@@ -262,7 +262,7 @@
       }
     },
     {
-      "name": "ODataTests2",
+      "name": "ODataTest2",
       "description": "Description.",
       "dbSettingName": "oracle1",
       "canCreate": true,
@@ -325,7 +325,7 @@
       }
     },
     {
-      "name": "ODataTests3",
+      "name": "ODataTest3",
       "description": "Description.",
       "dbSettingName": "oracle1",
       "canCreate": true,
@@ -528,7 +528,7 @@
       }
     },
     {
-      "name": "ODataTests4",
+      "name": "ODataTest4",
       "description": "Description.",
       "dbSettingName": "oracle1",
       "canCreate": true,
@@ -570,7 +570,7 @@
       }
     },
     {
-      "name": "ODataTests5",
+      "name": "ODataTest5",
       "description": "Description.",
       "dbSettingName": "oracle1",
       "canCreate": true,
@@ -613,7 +613,7 @@
       }
     },
     {
-      "name": "ODataTests6",
+      "name": "ODataTest6",
       "description": "Description.",
       "dbSettingName": "oracle1",
       "canCreate": true,
@@ -691,7 +691,7 @@
       }
     },
     {
-      "name": "ODataTests7",
+      "name": "ODataTest7",
       "description": "Description.",
       "dbSettingName": "oracle1",
       "canCreate": true,
