--- a/src/main/resources/oiyokan/oiyokan-settings-PostgreSQL.json
+++ b/src/main/resources/oiyokan/oiyokan-settings-PostgreSQL.json
@@ -23,7 +23,7 @@
   ],
   "entitySet": [
     {
-      "name": "ODataTests1",
+      "name": "ODataTest1",
       "description": "Description.",
       "dbSettingName": "postgres1",
       "canCreate": true,
@@ -246,7 +246,7 @@
       }
     },
     {
-      "name": "ODataTests2",
+      "name": "ODataTest2",
       "description": "Description.",
       "dbSettingName": "postgres1",
       "canCreate": true,
@@ -313,7 +313,7 @@
       }
     },
     {
-      "name": "ODataTests3",
+      "name": "ODataTest3",
       "description": "Description.",
       "dbSettingName": "postgres1",
       "canCreate": true,
@@ -537,7 +537,7 @@
       }
     },
     {
-      "name": "ODataTests4",
+      "name": "ODataTest4",
       "description": "Description.",
       "dbSettingName": "postgres1",
       "canCreate": true,
@@ -581,7 +581,7 @@
       }
     },
     {
-      "name": "ODataTests5",
+      "name": "ODataTest5",
       "description": "Description.",
       "dbSettingName": "postgres1",
       "canCreate": true,
@@ -626,7 +626,7 @@
       }
     },
     {
-      "name": "ODataTests6",
+      "name": "ODataTest6",
       "description": "Description.",
       "dbSettingName": "postgres1",
       "canCreate": true,
@@ -710,7 +710,7 @@
       }
     },
     {
-      "name": "ODataTests7",
+      "name": "ODataTest7",
       "description": "Description.",
       "dbSettingName": "postgres1",
       "canCreate": true,
