--- a/src/main/resources/oiyokan/oiyokan-settings-Template.json
+++ b/src/main/resources/oiyokan/oiyokan-settings-Template.json
@@ -68,7 +68,7 @@
   ],
   "entitySet": [
     {
-      "name": "Oiyokans",
+      "name": "Oiyokan",
       "description": "Oiyokan internal info. Do not change.",
       "dbSettingName": "oiyokanKan",
       "canCreate": true,
