--- a/src/main/resources/oiyokan/oiyokan-settings-PostgreSQL.json
+++ b/src/main/resources/oiyokan/oiyokan-settings-PostgreSQL.json
@@ -13,7 +13,7 @@
     },
     {
       "name": "postgres1",
-      "type": "postgres",
+      "type": "PostgreSQL",
       "description": "Sample postgres settings. Change the settings to suit your environment.",
       "jdbcDriver": "org.postgresql.Driver",
       "jdbcUrl": "jdbc:postgresql://localhost:5432/dvdrental",
