--- a/src/main/resources/oiyokan/oiyokan-settings-PostgreSQL.json
+++ b/src/main/resources/oiyokan/oiyokan-settings-PostgreSQL.json
@@ -763,7 +763,7 @@
       }
     },
     {
-      "name": "ODataTest8s",
+      "name": "ODataTest8",
       "description": "Description.",
       "dbSettingName": "postgres1",
       "canCreate": true,
@@ -798,7 +798,7 @@
       }
     },
     {
-      "name": "ODataTest8Subs",
+      "name": "ODataTest8Sub",
       "description": "Description.",
       "dbSettingName": "postgres1",
       "canCreate": true,
@@ -842,7 +842,7 @@
       }
     },
     {
-      "name": "ODataTest8SubSubs",
+      "name": "ODataTest8SubSub",
       "description": "Description.",
       "dbSettingName": "postgres1",
       "canCreate": true,
