--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>jp.oiyokan</groupId>
 	<artifactId>oiyokan-demosite</artifactId>
-	<version>1.10.20210430h</version>
+	<version>1.10.20210501c</version>
 	<name>oiyokan-demosite</name>
 	<description>Oiyokan is a simple OData v4 Server. (based on Apache
 		Olingo / Spring Boot / h2 database)</description>
@@ -86,7 +86,7 @@
 		<dependency>
 			<groupId>jp.oiyokan</groupId>
 			<artifactId>oiyokan</artifactId>
-			<version>1.10.20210430h</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
